almost done with main landing page elements alignm,ent issue (check notes)

--- a/style/style.scss
+++ b/style/style.scss
@@ -556,9 +556,6 @@ footer {
 @media (min-width: 768px) {
   // LANDING PAGE and GENERAL
 
-  * {
-  }
-
   body {
     justify-content: center;
     margin: auto;
@@ -574,13 +571,19 @@ footer {
     width: 20%;
   }
 
-  .fonctionnement-title {
-    margin-left: 30px;
+  .fonctionnement,
+  .restaurant-title {
+    padding-left: 100px;
+    padding-right: 100px;
   }
+
+  // .fonctionnement-title {
+  //   margin-left: 30px;
+  // }
 
   .fonctionnement-cards {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
   }
 
   .fonctionnement1,
@@ -589,9 +592,9 @@ footer {
     width: 30%;
   }
 
-  .restaurant-title {
-    padding-left: 50px;
-  }
+  // .restaurant-title {
+  //   padding-left: 50px;
+  // }
 
   .restaurant-card-container {
     display: flex;
@@ -601,7 +604,7 @@ footer {
   }
 
   .restaurant-card {
-    width: 500px;
+    width: 40%;
   }
 
   // SECONDARY PAGES
